fix download and media page on safari

--- a/assets/styles/app/home.css
+++ b/assets/styles/app/home.css
@@ -56,10 +56,27 @@
     border: 2px solid #b5b5b5;
 }
 
+#home-media .youtube-pane {
+    max-width: 300px;
+    margin-right: 3%;
+}
+
+#home-media .youtube-item {
+    height: 225px;
+    width: 100%;
+}
+
 @media (min-width: 960px) and (max-width: 1280px) {
     .event-image {
         margin: 0px 30px 15px 0px;
         min-height: 180px;
+    }
+    #home-media .youtube-pane {
+        width: 250px;
+        margin-right: 5%;
+    }
+    #home-media .youtube-item {
+        height: 190px;
     }
 }
 
@@ -74,6 +91,13 @@
     }
     .logo {
         max-height: 72px;
+    }
+    #home-media .youtube-pane {
+        width: 288px;
+        margin-right: 5%;
+    }
+    #home-media .youtube-item {
+        height: 215px;
     }
 }
 
@@ -93,5 +117,12 @@
         font-size: 16px;
         font-weight: bold;
         line-height: inherit;
+    }
+    #home-media .youtube-pane {
+        width: 255px;
+        margin-right: 0;
+    }
+    #home-media .youtube-item {
+        height: 190px;
     }
 }
